Fixed footer alignment problem

--- a/css/main.css
+++ b/css/main.css
@@ -215,10 +215,9 @@ video {
     .footer{
         background-color: gray;
         padding: 50px 10%;
-        height: 50px;
     }
     .footer > h2, .contact > h2, .contact > p, .contact > img{
-        display: inline;
+        display: inline-block;
     }
     .contact{
         float: right;
